--- a/src/app/pages/settings/support/support.component.html
+++ b/src/app/pages/settings/support/support.component.html
@@ -95,12 +95,12 @@
         </mat-tab>
         <mat-tab label="Pesan Bantuan">
           <div class="ayo-middle p-24" fxLayout="column" fusePerfectScrollbar>
-            <!-- <pesan-bantuan> </pesan-bantuan> -->
-            <div class="full-size" style="min-height: 700px;" fxLayout="row" fxLayoutAlign="center center">
+            <pesan-bantuan> </pesan-bantuan>
+            <!-- <div class="full-size" style="min-height: 700px;" fxLayout="row" fxLayoutAlign="center center">
               <img src="assets/images/ayo/AYO_SRC_(Master).png"
                 style="width: 160px; height: 100px; object-fit: cover; object-position: 0 0;"
                 srcset="assets/images/ayo/AYO_SRC_(Master)@2x.png 2x" alt="Help Detail">
-            </div>
+            </div> -->
           </div>
         </mat-tab>
       </mat-tab-group>
