--- a/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
@@ -59,7 +59,9 @@
                 <tbody>
                   <tr *ngFor="let item of detailPengajuan?.logs">
                     <td class="w-100">
-                      <span class="email text-truncate">{{item?.status}}</span>
+                      <span class="email text-truncate"
+                        [ngStyle]="{ 'background-color': renderStatusName(item?.status).bgColor, 'color': renderStatusName(item?.status).textColor }"
+                        style="text-align: center;padding: 5px 0; border-radius: 10px;">{{renderStatusName(item?.status).name}}</span>
                     </td>
                     <td class="w-100">
                       <span class="email text-truncate">{{item?.updated_at | date:'dd/MM/yyyy HH:mm'}}</span>
@@ -71,11 +73,15 @@
                 </tbody>
               </table>
             </div>
-            <form class="update-status p-24" fxLayout="row" fxLayoutAlign="start center">
+            <form class="update-status p-24" fxLayout="row" fxLayoutAlign="start center"
+              *ngIf="orderStatuses.length > 0">
               <mat-form-field class="mr-16 is-light" fxFlex>
                 <mat-select [formControl]="statusForm" placeholder="Pilih Status Pengajuan" required>
                   <mat-option *ngFor="let status of orderStatuses" [value]="status">
-                    {{status ? status.toUpperCase() : ''}}</mat-option>
+                    <span
+                      [ngStyle]="{ 'background-color': renderStatusName(status).bgColor, 'color': renderStatusName(status).textColor }"
+                      style="text-align: center;padding: 5px 15px; border-radius: 10px;">{{status ? renderStatusName(status).name : ''}}</span>
+                  </mat-option>
                 </mat-select>
               </mat-form-field>
 
