--- a/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
@@ -34,7 +34,7 @@
                       <span class="email text-truncate">{{detailPengajuan?.name}}</span>
                     </td>
                     <td class="w-100">
-                      <span class="email text-truncate">+62{{detailPengajuan?.phone}}</span>
+                      <span class="email text-truncate">{{detailPengajuan?.phone}}</span>
                     </td>
                     <td class="w-100">
                       <p *ngFor="let item of productList" class="email text-truncate">{{item}}</p>
