--- a/src/app/pages/user-management/pengajuan-src/index/pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/index/pengajuan-src.component.html
@@ -27,81 +27,30 @@
       </div>
       <form [formGroup]="formFilter" autoComplete="off">
         <div fxLayout="row wrap" fxLayout.lt-md="column" class="px-24 pt-16" fxLayoutGap="20px" fxLayoutGap.lt-md="0px">
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="20%" class="is-light form-primary">
             <mat-select placeholder="Provinsi" formControlName="province_id">
-              <mat-option value="1">Semua Provinsi</mat-option>
+              <mat-option [value]="{value: null, key: 'national'}">Semua Provinsi</mat-option>
               <mat-option *ngFor="let item of listProvince" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="20%" class="is-light form-primary">
             <mat-select placeholder="Kabupaten / Kota" formControlName="city_id">
-              <mat-option *ngIf="listCities.length > 0" [value]="formFilter.get('province_id').value">Semua Kota
+              <mat-option *ngIf="listCities.length > 0"
+                [value]="{value: formFilter.get('province_id').value, key: 'province_id'}">Semua Kota
               </mat-option>
               <mat-option *ngFor="let item of listCities" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
 
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
+          <mat-form-field fxFlex="20%" class="is-light form-primary">
             <mat-select placeholder="Kecamatan" formControlName="district_id">
-              <mat-option *ngIf="listDistricts.length > 0" [value]="formFilter.get('city_id').value">Semua Kecamatan
+              <mat-option *ngIf="listDistricts.length > 0"
+                [value]="{ value: formFilter.get('city_id').value, key: 'city_id'}">Semua Kecamatan
               </mat-option>
               <mat-option *ngFor="let item of listDistricts" [value]="item.id">{{item.name}}</mat-option>
             </mat-select>
           </mat-form-field>
-          <!-- <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="National" formControlName="national">
-              <mat-option *ngFor="let item of listLevelArea" [value]="item.id">{{item.name}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Zone" formControlName="zone" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['zone'])" [value]="item.id">{{item.name === 'all' ? 'Semua
-                Zona' :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Regional" formControlName="region" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['region'])" [value]="item.id">{{item.name === 'all' ? 'Semua
-                Regional'
-                :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Area" formControlName="area" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['area'])" [value]="item.id">{{item.name === 'all' ? 'Semua
-                Area'
-                :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Salespoint" formControlName="salespoint" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['salespoint'])" [value]="item.id">{{item.name === 'all' ?
-                'Semua
-                Salespoint'
-                :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="District" formControlName="district" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['district'])" [value]="item.id">{{item.name === 'all' ? 'Semua
-                District'
-                :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field>
-          <mat-form-field fxFlex="12%" class="is-light form-primary">
-            <mat-select placeholder="Territory" formControlName="territory" multiple>
-              <mat-option *ngFor="let item of filteringGeotree(list['territory'])" [value]="item.id">{{item.name === 'all' ? 'Semua
-                Territori'
-                :
-                item.code}}</mat-option>
-            </mat-select>
-          </mat-form-field> -->
         </div>
       </form>
       <ngx-datatable class="material" style="border-top: 1px solid #e3e3e3" [rows]="rows"
@@ -110,18 +59,6 @@
         [selected]="selected" [count]="pagination.total" [offset]="offsetPagination" [limit]="pagination.per_page"
         [externalPaging]="true" [externalSorting]="true" (page)="setPage($event)" (sort)="onSort($event)"
         (select)="onSelect($event)">
-
-        <!-- <ngx-datatable-column [width]="68" [canAutoResize]="false" [sortable]="false">
-          <ng-template ngx-datatable-header-template let-value="value" let-allRowsSelected="allRowsSelected"
-            let-selectFn="selectFn">
-            <mat-checkbox [checked]="allRowsSelected" (change)="selectFn(!allRowsSelected)"></mat-checkbox>
-          </ng-template>
-
-          <ng-template ngx-datatable-cell-template let-row="row" let-value="value" let-isSelected="isSelected"
-            let-onCheckboxChangeFn="onCheckboxChangeFn">
-            <mat-checkbox [checked]="isSelected" (change)="onCheckboxChangeFn($event)"></mat-checkbox>
-          </ng-template>
-        </ngx-datatable-column> -->
 
         <ngx-datatable-column name="Nama Toko" prop="name">
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value">
@@ -165,9 +102,9 @@
           <ng-template ngx-datatable-cell-template let-row="row" let-value="value"
             style="justify-content: center !important">
             <div class="button-row" style="margin-left: -10px">
-              <!-- <button mat-icon-button color="" (click)="directEdit(row)">
+              <button mat-icon-button (click)="directEdit(row)" *ngIf="row.status !== 'approved'">
                 <mat-icon class="secondary-text">edit</mat-icon>
-              </button> -->
+              </button>
               <button mat-icon-button (click)="directDetail(row)">
                 <mat-icon>remove_red_eye
                 </mat-icon>
