--- a/src/app/pages/user-management/pengajuan-src/edit/pengajuan-src-edit.component.html
+++ b/src/app/pages/user-management/pengajuan-src/edit/pengajuan-src-edit.component.html
@@ -114,7 +114,7 @@
                   </mat-error>
                 </mat-form-field>
 
-                <div *ngIf="!isDetail" class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
+                <div class="confirm btn-confirm" fxLayout="row" fxLayoutGap="25px">
                   <button mat-raised-button type="button" class="confirmation-button" fxFlex="20" (click)="submit()"
                     [disabled]="submitting">
                     <ng-container *ngIf="!submitting">
