--- a/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
+++ b/src/app/pages/user-management/pengajuan-src/detail/detail-pengajuan-src.component.html
@@ -74,7 +74,7 @@
               </table>
             </div>
             <form class="update-status p-24" fxLayout="row" fxLayoutAlign="start center"
-              *ngIf="orderStatuses.length > 0">
+              *ngIf="permission?.ubah && orderStatuses.length > 0">
               <mat-form-field class="mr-16 is-light" fxFlex>
                 <mat-select [formControl]="statusForm" placeholder="Pilih Status Pengajuan" required>
                   <mat-option *ngFor="let status of orderStatuses" [value]="status">
