delete text on right pesan bantuan list

--- a/src/app/pages/settings/support/content/pesan-bantuan/pesan-bantuan.html
+++ b/src/app/pages/settings/support/content/pesan-bantuan/pesan-bantuan.html
@@ -281,14 +281,14 @@
             <div style="font-size: 15px; color: #666; font-weight: 500; margin-bottom: 10px;">
               Silahkan memilih pesan bantuan di samping untuk melihat percakapan dengan <strong>Customer Care AYO</strong> 
             </div>
-            <div style="font-size: 15px; color: #666; font-weight: 500; margin-bottom: 10px;">
+            <!-- <div style="font-size: 15px; color: #666; font-weight: 500; margin-bottom: 10px;">
               Ajukan kendala anda dan chat ke <strong>Customer Care AYO</strong> dengan mengklik tombol dibawah ini
             </div>
             <div fxLayout="row" fxLayoutAlign="start start">
               <button mat-raised-button type="button" class="confirmation-button" style="margin: 0px auto;" (click)="goToCreateNewBantuan()">
                 Perlu Bantuan?
               </button>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
