--- a/src/app/pages/settings/support/support.component.html
+++ b/src/app/pages/settings/support/support.component.html
@@ -1,7 +1,7 @@
 <div class="page-layout simple fullwidth" fxLayout="column" fusePerfectScrollbar>
   <!-- HEADER -->
   <page-content-header [contentTitle]="'Bantuan'">
-    <button *ngIf="selectedTab == 1 && !isPesanBantuanCreate" style="min-width: 120px;" (click)="redirectToCreatePesanBantuan()" mat-raised-button aria-label="Cabang"  type="button">
+    <button *ngIf="selectedTab == 1 && !isPesanBantuan" style="min-width: 120px;" (click)="redirectToCreatePesanBantuan()" mat-raised-button aria-label="Cabang"  type="button">
       <mat-icon>add</mat-icon>BUAT
     </button>
   </page-content-header>
@@ -107,6 +107,9 @@
           </div>
         </mat-tab>
       </mat-tab-group>
+      <div class='badgePesanBantuan' fxLayout="row" fxLayoutAlign="center center" *ngIf="countNotifPesanBantuan > 0">
+        <span>{{countNotifPesanBantuan > 9 ? countNotifPesanBantuan + '+' : countNotifPesanBantuan}}</span>
+      </div>
 
       <!-- DETAIL -->
       <div fxLayout="row" fxLayoutAlign="start start" fusePerfectScrollbar *ngIf="isListCategoryDetails">
